tests/integrations/json-basic-fail/tests/actual_tests/touching_above_below.rs
fn main() {
    use_unit(1_u32);
    //~^ ERROR: mismatched types
    //~v ERROR: mismatched types
    use_unit(1_u32);
}

fn use_unit(_: ()) {}
